# RTC-stack-poc

./: .gitignore  CMakeLists.txt
DemoSink/: CMakeLists.txt  conanfile.py
DemoSink/src/: SimpleUdpTransport.cpp  SimpleUdpTransport.h  SimpleUdpTransportImpl.h  SimpleUdpTransportImpl_Linux.cpp  SimpleUdpTransportImpl_Linux.h  SimpleUdpTransportImpl_Win32.cpp  SimpleUdpTransportImpl_Win32.h  main.cpp
DemoSink/src/ui/: MainWindow.cpp
DemoSink/src/vp8/: VP8PacketReconstructor.cpp
RtpPacketizationInterface/: CMakeLists.txt
RtpRtcp/: CMakeLists.txt
RtpRtcp/include/RtpRtcp/: RtpPacket.h
RtpRtcp/src/: Session.cpp
RtpTransportInterface/: CMakeLists.txt
RtpTransportInterface/include/RtpTransport/: State.h  Transport.h
RtpTransportInterface/src/: Transport.cpp
